JAMES-2806 Solve some warnings in ObjectStorageBlobsDAO